# hurry

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.e2e.yml  docker-compose.yml  example.env  install.sh
.agents/: patterns.md
.config/: nextest.toml
.nudge/: git-push.yaml
.scratch/: phase1-database-schema.md  phase2-auth-infrastructure.md  phase3-database-layer.md  self-service-signup.md
.sqlx/: query-102dd841f6ece7379fae41d88c7065139b825f9bbe4167055ddc435351175a15.json  query-13a99366d5637110184b97c041b18cf4180d39e704161ce5561ed934da2aed5a.json  query-15055f7d54e5f194b2c05b8f0ec9f2b6bf29ce4d2282366eca53b7ceee27543f.json  query-18e422c3e7dc3980e6d737c230fe358702d1f6d88cb4dadb9b319f56de90fd1d.json  query-1ba313f880bcc5fd69fa779948e05e74fc9696a455af512bf6a085e844ec371f.json  query-1dac147d18c3a1161c5709655519391cf007f169407b91d9f0ea311b8f40bcf2.json  query-274fcbc37a46b31a7f5eb95151ffd7e6f0b812c340e96945d719bd9bc233808d.json  query-2b490f4d73c1c254b610ecc18d430f9902946b49519509237f474a1ec376f8ad.json  query-2ebc1876ae2d7466aa8d3a4528127f9b82315f9345789aa84fa029d5903cd78d.json  query-316965e161acced6a75848a8025a738de4727567cfa3fe77c2a3232c92d08470.json  query-34029351b2f54ad8bac97cb6ef2ca5549a7c6f6cec5cdd89f09599c00d7ea4e0.json  query-3bb19254d9252552cc345153b14f6e19dc254dc544d14fbfa6b64526912bb2d7.json  query-3e0281937c4b5e1cdcd85bdf0f8929b8468d417507ea26be93f1807aa13030f1.json  query-4a91c0345996b5d517b0ea6cf63d3f0bae5b49324f26c59cf6c3d42f29d6da41.json  (+32 more)
docs/: DESIGN.md  self-hosting.md
src/: cas.rs  (+5 more)
(+69 files in other folders)
