[package]
name = "hurry"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
homedir = "0.3.4"
blake3 = "1.8.2"
rusqlite = { version = "0.35.0", features = ["bundled", "time"] }
rusqlite_migration = { version = "2.1.0", features = ["from-directory"] }
include_dir = "0.7.4"
time = "0.3.41"
walkdir = "2.5.0"
toml = "0.8.22"
cargo_metadata = "0.19.2"
camino = "1.1.9"
tracing-flame = "0.2.0"
sysinfo = { version = "0.35.1", features = ["apple-sandbox"] }
color-eyre = "0.6.5"
tracing-error = "0.2.1"
lockfile = "0.4.0"
rayon = "1.11.0"
tap = "1.0.1"
hex = "0.4.3"
fslock = "0.2.1"
