[package]
name = "hurry"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
homedir = "0.3.4"
blake3 = "1.8.2"
walkdir = "2.5.0"
cargo_metadata = "0.19.2"
tracing-flame = "0.2.0"
color-eyre = "0.6.5"
tracing-error = "0.2.1"
lockfile = "0.4.0"
rayon = "1.11.0"
tap = "1.0.1"
hex = "0.4.3"
fslock = "0.2.1"
dashmap = { version = "6.1.0", features = ["rayon"] }
ahash = "0.8.12"
filetime = "0.2.25"
tracing-tree = "0.4.0"
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
